<br>
Limbo v0.9.7 (May 3, 2013)<br>
- Fixed Removable Devices<br>
- Enabled TSC feature for Pentium+<br>
- Fixed some compatibility issues with JB<br>
- Using gcc 4.7 and -O3 and full ARM (no thumb)<br>
- Enable TAP interface (Experimental)<br>
- Alternative orientation<br>
- Switching to EGL1.1 for compatibility<br>
- Keep screen on<br>
<br>

<br>
Limbo v0.9.6 (Jan 30, 2013)<br>
- Fixed Boot parameters<br>
<br>

Limbo v0.9.5 (Jan 19, 2013)<br>
<br>
- Fixed Mouse relative position for SDL.<br>
- Enabled SMP mode (multi-core emulation).<br>
<br>

Limbo v0.9.4 (Jan 6, 2012)<br>
<br>
- Increased RAM Memory to 1GB.<br>
- New SDL User Interface.<br>
- Enabled External Mouse (Bluetooth).<br>
- Sound Emulation for SB16 (only under SDL Interface).<br>
- Fixed Keyboard CTRL,ALT keys and removed extra screens for VNC<br>
<br>

<br><br>
Limbo v0.9.3 (Nov 3, 2012)<br>
<br>
- Fixed crash issues while copying files inside VM, using sigaltstack instead of gthread<br>
- Fixed issue with canceling image selection and enabled ejection of media (CD, Floppy).<br>
- Fixed some crashes due to pointer outside of VNC area.<br>
- File manager now detects VHD file format as well.<br>
- Some performance enhancements. Fixed issue with optimization for cpu-exec.c and using gcc-4.6 for ARM build this fixes.<br>
- Enabled Multithreaded AIO option for Android 3.0 devices, this should speed up 
  disk I/O inside the virtual machine.<br>
- Fixed memory.h compilation issue (patch provided by Yair Lifshitz).<br>
- Fixed load linker errors with stdio.h (patch provided by Yair Lifshitz).<br>
- Port for x86 phones (patch provided by Yair Lifshitz).<br>
<br>

<br><br>
Limbo v0.9.2 (Oct 10, 2012)<br>
<br>
- Fixed issue with booting HDD images, removed TSC features for now<br>
- Fixed dlfree issue for ICS devices, removed optimization (-O3) for gmem.c<br>
- Fixed issue with browsing CD ROM and Floppy images while VM is running<br>
- Fixed timing issue while getting status<br>