@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.max2idea.android.limbo.main"
-    android:versionCode="11"
-    android:versionName="0.9.7" >
+    android:versionCode="12"
+    android:versionName="0.9.7b" >
 
     <uses-feature>
     </uses-feature>
