@@ -1,8 +1,8 @@
 <br>
-<H2>
+<H3>
 	For instructions, compatibility, FAQ, and other details please visit:
 	<br><br>
 	<a href="http://code.google.com/p/limbo-android/wiki/LimboAndroid">http://code.google.com/p/limbo-android/wiki/LimboAndroid</a>
-<H1/>
+<H3/>
 <br>
 <br>
