@@ -1,6 +1,6 @@
 #NDK_TOOLCHAIN_VERSION := 4.4.3
-#NDK_TOOLCHAIN_VERSION=4.6
-NDK_TOOLCHAIN_VERSION=4.7
+NDK_TOOLCHAIN_VERSION=4.6
+#NDK_TOOLCHAIN_VERSION=4.7
 APP_ABI := armeabi
 
 ifeq ($(TARGET_ARCH),arm)
