@@ -1,8 +1,8 @@
 # Automatically generated by configure - do not modify
 SRC_PATH=/home/dev/prj/opensource/limbo-android/jni/qemu/roms/vgabios
-CC=/home/dev/tools/android-ndk-r8e/toolchains/arm-linux-androideabi-4.7/prebuilt/linux-x86/bin/arm-linux-androideabi-gcc
+CC=/home/dev/tools/android-ndk-r8e/toolchains/arm-linux-androideabi-4.6/prebuilt/linux-x86/bin/arm-linux-androideabi-gcc
 BCC=bcc
-CPP=/home/dev/tools/android-ndk-r8e/toolchains/arm-linux-androideabi-4.7/prebuilt/linux-x86/bin/arm-linux-androideabi-cpp
+CPP=/home/dev/tools/android-ndk-r8e/toolchains/arm-linux-androideabi-4.6/prebuilt/linux-x86/bin/arm-linux-androideabi-cpp
 OBJCOPY=objcopy
 IASL=iasl
-LD=/home/dev/tools/android-ndk-r8e/toolchains/arm-linux-androideabi-4.7/prebuilt/linux-x86/bin/arm-linux-androideabi-ld
+LD=/home/dev/tools/android-ndk-r8e/toolchains/arm-linux-androideabi-4.6/prebuilt/linux-x86/bin/arm-linux-androideabi-ld
