@@ -711,7 +711,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="right|center_vertical"
                                 android:gravity="right|center_vertical"
-                                android:text="Enable Multithread AIO"
+                                android:text="Multithread AIO (WARNING!)"
                                 android:textSize="15dip" />
 
                             <CheckBox
